chore(#5 - Browser Support) - Include polyfills for IE11, Fix Print CSS - CUSTOMER  VERSION Pt 2
Moved address to move down to avoid overlapping with date due to absolute positioning

--- a/src/app/core-view/core-view.component.scss
+++ b/src/app/core-view/core-view.component.scss
@@ -9,7 +9,7 @@
 	.ma-store-address {
 		position: absolute;
 		right: 10px;
-		top: 70px;
+		top: 120px;
 		height: 100px;
 		color: black;
 		z-index: 1000;
